# instagram-server-django

./: db.sqlite3  pyproject.toml
config/: settings.py
